feat(notification): isolate notifications by application
